css/style.css
#header-section{
    background-color: #ffffff;
}
.img-fluid {
    max-width: 25%;
    height: auto;
  }
#name-div{
    font-family: Microsoft New Tai Lue;
}
#my-website{
    font-family: Segoe UI;
}
#com-div{
    font-family: SimHei;
}
#second-bg{
    background-color: #262626;
}
#lang-card{
    background-color: #262626;
    color: white;
}
.contact-btn{
    border-radius: 1em;
    width: 6em;
    height: 2em;
    color: white;
    border: none;
    background-color: black;
}
.contact-btn:hover {
    background-color: #666666;
  }

